Add Trailer, Recommendations

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 REACT_APP_URL=https://api.themoviedb.org
 REACT_APP_AUTH_TOKEN=0e152fc98326ec17d5ac7b6f13aaba74
-REACT_APP_IMG_URL=https://image.tmdb.org/t/p/w500/
+REACT_APP_IMG_URL=https://image.tmdb.org/t/p/
+REACT_APP_VID_URL=https://www.youtube.com/watch?v=
+REACT_APP_VID_EMB_URL=https://www.youtube.com/embed/
 REACT_APP_IMG_URL_ORIGINAL=https://image.tmdb.org/t/p/original
